--- a/configs/train/baseline_colab_full_unfreeze.yaml
+++ b/configs/train/baseline_colab_full_unfreeze.yaml
@@ -4,7 +4,7 @@ model:
     name:                       baseline_sentiment_bert
     args:
         nclasses:               5
-        freeze:                 True
+        freeze:                 False
 optimizer:
     name:                       Adam
     args:
@@ -30,7 +30,7 @@ dataset:
     train:
         name: shopee_raw
         args:
-            data_root_dir:      /content/shopee-contest6/data/full/         
+            data_root_dir:      /content/shopee-contest6/data/clean/full/         
             is_train:           True  
         loader:
             name: shopee_loader
@@ -40,7 +40,7 @@ dataset:
     val:
         name: shopee_raw
         args:
-            data_root_dir:      /content/shopee-contest6/data/full/          
+            data_root_dir:      /content/shopee-contest6/data/clean/full/          
             is_train:           False  
         loader:
             name: shopee_loader
