--- a/configs/train/baseline_local_nhtlong.yaml
+++ b/configs/train/baseline_local_nhtlong.yaml
@@ -1,7 +1,7 @@
 id: 2
 pretrained: Null
 model:
-    name:                       baseline_sentiment_bert
+    name:                       xlnet_sentiment
     args:
         nclasses:               5
         freeze:                 True
@@ -28,7 +28,7 @@ scheduler:
         verbose:                  True         
 dataset:
     train:
-        name: shopee_raw
+        name: shopee_xlnet
         args:
             data_root_dir:      /home/ken/shopee_ws/sentiment/shopee-contest6/data/clean/full/         
             is_train:           True  
@@ -38,7 +38,7 @@ dataset:
                 batch_size:     2
                 shuffle:        True
     val:
-        name: shopee_raw
+        name: shopee_xlnet
         args:
             data_root_dir:      /home/ken/shopee_ws/sentiment/shopee-contest6/data/clean/full/          
             is_train:           False  
