--- a/configs/kaggle/unfreeze/bert_base.yaml
+++ b/configs/kaggle/unfreeze/bert_base.yaml
@@ -10,8 +10,9 @@ optimizer:
     args:
         lr:                     0.01
 loss:
-    name:                       SmoothedCrossEntropy
+    name:                       CrossEntropyLoss
     args:
+        ignore_index:           5
 metric:
     -   name:                   Accuracy
         args:                   Null
