--- a/configs/kaggle/freeze/xlnet_base.yaml
+++ b/configs/kaggle/freeze/xlnet_base.yaml
@@ -10,8 +10,9 @@ optimizer:
     args:
         lr:                     0.01
 loss:
-    name:                       SmoothedCrossEntropy
+    name:                       CrossEntropyLoss
     args:
+        ignore_index:           5
 metric:
     -   name:                   Accuracy
         args:                   Null
@@ -30,22 +31,22 @@ dataset:
     train:
         name: shopee_xlnet_base
         args:
-            data_root_dir:      ./clean/full/         
+            data_root_dir:      ./data/clean/full/         
             is_train:           True  
         loader:
             name: shopee_loader
             args:
-                batch_size:     64
+                batch_size:     32
                 shuffle:        True
     val:
         name: shopee_xlnet_base
         args:
-            data_root_dir:      ./clean/full/          
+            data_root_dir:      ./data/clean/full/          
             is_train:           False  
         loader:
             name: shopee_loader
             args:
-                batch_size:     64
+                batch_size:     32
 trainer: 
     nepochs: 10
     cp_dir: ./cp
