--- a/configs/kaggle/freeze/bert_base.yaml
+++ b/configs/kaggle/freeze/bert_base.yaml
@@ -8,10 +8,11 @@ model:
 optimizer:
     name:                       Adam
     args:
-        lr:                     0.01
+        lr:                     0.00000001
 loss:
-    name:                       SmoothedCrossEntropy
+    name:                       CrossEntropyLoss
     args:
+        ignore_index:           5
 metric:
     -   name:                   Accuracy
         args:                   Null
@@ -35,7 +36,7 @@ dataset:
         loader:
             name: shopee_loader
             args:
-                batch_size:     64
+                batch_size:     32
                 shuffle:        True
     val:
         name: shopee_bert_base
@@ -45,9 +46,9 @@ dataset:
         loader:
             name: shopee_loader
             args:
-                batch_size:     64
+                batch_size:     32
 trainer: 
-    nepochs: 10
+    nepochs: 50
     cp_dir: ./cp
     val_step: 1
     log_step: 1
