--- a/configs/freeze/xlnet_large.yaml
+++ b/configs/freeze/xlnet_large.yaml
@@ -1,17 +1,18 @@
 id: 3
 pretrained: Null
 model:
-    name:                       bert_multi
+    name:                       xlnet_large
     args:
         nclasses:               5
-        freeze:                 False
+        freeze:                 True
 optimizer:
     name:                       Adam
     args:
-        lr:                     0.01
+        lr:                     0.00001
 loss:
-    name:                       SmoothedCrossEntropy
+    name:                       CrossEntropyLoss
     args:
+        ignore_index:           5
 metric:
     -   name:                   Accuracy
         args:                   Null
@@ -28,26 +29,26 @@ scheduler:
         verbose:                  True         
 dataset:
     train:
-        name: shopee_bert_multi
+        name: shopee_xlnet_large
         args:
             data_root_dir:      ./data/clean/full/         
             is_train:           True  
         loader:
             name: shopee_loader
             args:
-                batch_size:     64
+                batch_size:     32
                 shuffle:        True
     val:
-        name: shopee_bert_multi
+        name: shopee_xlnet_large
         args:
             data_root_dir:      ./data/clean/full/          
             is_train:           False  
         loader:
             name: shopee_loader
             args:
-                batch_size:     64
+                batch_size:     32
 trainer: 
-    nepochs: 10
+    nepochs: 50
     cp_dir: ./cp
     val_step: 1
     log_step: 1
